--- a/ThesisReport/reference.bib
+++ b/ThesisReport/reference.bib
@@ -362,3 +362,20 @@
  organization={IEEE}
 }
 
+@article{canny86,
+ title={A computational approach to edge detection},
+ author={Canny, John},
+ journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on},
+ number={6},
+ pages={679--698},
+ year={1986},
+ publisher={IEEE}
+}
+
+@book{ritt96,
+ title={Handbook of computer vision algorithms in image algebra},
+ author={Ritter, Gerhard X and Wilson, Joseph N},
+ volume={1},
+ year={1996},
+ publisher={Citeseer}
+}
